--- a/Css/styles.css
+++ b/Css/styles.css
@@ -92,6 +92,10 @@ button:hover {
   cursor: pointer;
 }
 
+a:focus, button:focus {
+  outline: none;
+}
+
 section {
   width: 100vw;
 }
@@ -100,7 +104,7 @@ section {
   background-image: url(../Images/home-bg.png);
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   height: 75vh;
   display: flex;
