--- a/Css/styles.scss
+++ b/Css/styles.scss
@@ -118,6 +118,10 @@ button:hover {
     cursor: pointer;
 }
 
+a:focus, button:focus{
+    outline: none;
+}
+
 section{
     width: 100vw;
 }
@@ -126,7 +130,7 @@ section{
     background-image: url(../Images/home-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center;
     height: 75vh;
     display: flex;
