--- a/Css/styles.css
+++ b/Css/styles.css
@@ -302,27 +302,34 @@ section {
   font-size: 16px;
 }
 
-#cart-page {
-  padding: 30px 0;
-}
-#cart-page h4 {
-  text-align: center;
-  font-size: 28px;
-  font-weight: 700;
-  color: #FF3E41;
-  letter-spacing: 0.1px;
-  margin-bottom: 30px;
-}
 #cart-page #cart-display-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  margin: auto;
-  max-width: 830px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-top: 30px;
+}
+#cart-page #cart-display-grid .cart-cols {
+  display: flex;
+  flex-direction: column;
+  margin: 0 10px;
 }
 #cart-page #cart-display-grid .cart-cols h5 {
-  font-weight: 500;
-  font-size: 20px;
+  font-weight: 700;
+  font-size: 25px;
+  color: #FF3E41;
+  text-align: center;
+  letter-spacing: 0.1px;
+}
+#cart-page #cart-display-grid .cart-cols p {
+  text-align: center;
+  font-size: 21px;
+  letter-spacing: 0.3px;
   color: #363537;
+  font-weight: 500;
+}
+#cart-page #cart-display-grid .cart-cols #item-name-col, #cart-page #cart-display-grid .cart-cols #quantity-col, #cart-page #cart-display-grid .cart-cols #cost-col {
+  margin-top: 20px;
+  line-height: 1.5;
 }
 #cart-page p {
   font-weight: 700;
