--- a/Css/styles.scss
+++ b/Css/styles.scss
@@ -338,29 +338,36 @@ section{
 
 #cart-page{
 
-    padding: 30px 0;
-
-    h4{
-        text-align: center;
-        font-size: 28px;
-        font-weight: 700;
-        color: $tartOrange;
-        letter-spacing: 0.1px;
-        margin-bottom: 30px;
-    }
-
     #cart-display-grid{
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        margin: auto;
-        max-width: 830px;
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        margin-top: 30px;
         
         .cart-cols{
-
+            display: flex;
+            flex-direction: column;
+            margin: 0 10px;
+            
             h5{
-                font-weight: 500;
-                font-size: 20px;
+                font-weight: 700;
+                font-size: 25px;
+                color: $tartOrange;
+                text-align: center;
+                letter-spacing: 0.1px;
+            }
+
+            p{
+                text-align: center;
+                font-size: 21px;
+                letter-spacing: 0.3px;
                 color: $jet;
+                font-weight: 500;
+            }
+
+            #item-name-col, #quantity-col, #cost-col{
+                margin-top: 20px;
+                line-height: 1.5;
             }
         }
     }
