--- a/Css/styles.css
+++ b/Css/styles.css
@@ -302,27 +302,41 @@ section {
   font-size: 16px;
 }
 
+#cart-page {
+  width: 100%;
+}
 #cart-page #cart-display-grid {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  margin-top: 30px;
+  background-color: #e5e5e5;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  position: relative;
+  top: -50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  padding: 20px 0;
+  border-radius: 15px;
 }
 #cart-page #cart-display-grid .cart-cols {
   display: flex;
   flex-direction: column;
-  margin: 0 10px;
+  margin: 0 30px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 #cart-page #cart-display-grid .cart-cols h5 {
   font-weight: 700;
-  font-size: 25px;
+  font-size: 23px;
   color: #FF3E41;
   text-align: center;
   letter-spacing: 0.1px;
 }
 #cart-page #cart-display-grid .cart-cols p {
   text-align: center;
-  font-size: 21px;
+  font-size: 22px;
   letter-spacing: 0.3px;
   color: #363537;
   font-weight: 500;
