--- a/Css/styles.scss
+++ b/Css/styles.scss
@@ -186,13 +186,12 @@ section{
     }
 
     #products-grid1 {
-        padding: 50px 10px;
+        padding: 50px 0;
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        grid-column-gap: 10px;
         grid-row-gap: 35px;
         margin: auto;
-        max-width: 830px;
+        max-width: 770px;
 
         #pizza {
             background-image: url(../Images/pizza.jpg);
@@ -339,15 +338,21 @@ section{
 #cart-page{
     width: 100%;
 
+    #go-back{
+        position: relative;
+        top: 100px;
+        left: 57%;
+    }
+
     #cart-display-grid{
         display: flex;
         flex-direction: row;
         background-color: $cultured;
         width: fit-content;
         position: relative;
-        top: -50%;
+        top: 30px;
         left: 50%;
-        transform: translate(-50%, 50%);
+        transform: translate(-50%, 30px);
         padding: 20px 0;
         border-radius: 15px;
         
@@ -367,7 +372,7 @@ section{
 
             p{
                 text-align: center;
-                font-size: 22px;
+                font-size: 21px;
                 letter-spacing: 0.3px;
                 color: $jet;
                 font-weight: 500;
@@ -393,7 +398,7 @@ section{
     }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 950px) {
     ul {
         position: fixed;
         left: -100%;
@@ -433,5 +438,84 @@ section{
         transition: 0.15s ease-in;
         transform: translateY(-8px) rotate(-45deg);
     }
+    
+    #home {
 
+        h1 {
+            font-size: 29px;
+        }
+    }
+    
+    #products-grid {
+    
+        h2 {
+            font-size: 22px;
+        }
+    
+        #intro {
+            width: 60vw;
+            letter-spacing: 0.3px;
+        }
+    
+        #cart-btn{
+            width: 95vw;
+        }
+    
+        #products-grid1 {
+            grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+            max-width: 660px;
+    
+            .each-product {
+                width: 210px;
+                height: 210px;
+    
+                .cost-name {
+                    top: 149px;
+                    width: 52%;
+    
+                    h3{
+                        font-size: 15.5px;
+                    }
+    
+                    p{
+                        font-size: 17px;
+                    }
+                }
+    
+                .item-number {
+                    top: 149px;
+                    padding: 12.6px 2px;
+    
+                    p{
+                        font-weight: 700;
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+    }
+    
+    #contact{
+    
+        h3{
+            font-size: 28px;
+        }
+    
+        form{
+    
+            input{
+                width: 40vw;
+                font-size: 15px;
+            }
+        }
+    
+        footer{
+            font-size: 15px;
+        }
+    }
+
+    button {
+        padding: 8px 16px;
+        font-size: 16px;
+    }
 }
