--- a/Css/styles.scss
+++ b/Css/styles.scss
@@ -375,20 +375,14 @@ section{
                 font-size: 21px;
                 letter-spacing: 0.3px;
                 color: $jet;
-                font-weight: 500;
+                font-weight: 700;
             }
 
             #item-name-col, #quantity-col, #cost-col{
                 margin-top: 20px;
-                line-height: 1.5;
+                line-height: 2;
             }
         }
-    }
-
-    p{
-        font-weight: 700;
-        font-size: 25px;
-        color: $jet;
     }
 }
 
@@ -517,5 +511,27 @@ section{
     button {
         padding: 8px 16px;
         font-size: 16px;
+    }
+
+    #cart-page{
+    
+        #go-back{
+            left: 65%;
+        }
+    
+        #cart-display-grid{
+            
+            .cart-cols{
+                margin: 0 20px;
+                
+                h5{
+                    font-size: 18px;
+                }
+    
+                p{
+                    font-size: 17px;
+                }
+            }
+        }
     }
 }
